Update logo and favicon, enhance profile and homepage components. Changed ak-logo.svg to a smaller size with new gradient colors, added favicon.svg, and updated index.html and manifest.json accordingly. Introduced a resume download button in Homepage.js and improved avatar display in Profile.js with a new image. Enhanced button styles in App.css and added responsive design features.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,12 @@
 {
   "short_name": "AK Portfolio",
-  "name": "AK Portfolio - Full Stack & Mobile App Developer",
+  "name": "AK Portfolio - Mobile App Developer",
   "icons": [
+    {
+      "src": "favicon.svg",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/svg+xml"
+    },
     {
       "src": "ak-logo.svg",
       "sizes": "64x64 32x32 24x24 16x16",
@@ -20,6 +25,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ff6b35",
-  "background_color": "#000000"
+  "theme_color": "#667eea",
+  "background_color": "#0f0f23"
 }
